update the image src

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
       <div class="app">
         <!-- Hero section -->
         <div class="section">
-          <img src="./images/logo.svg" alt="Facebook-log" id="logo" />
+          <img src="../images/logo.svg" alt="Facebook-log" id="logo" />
           <h1>
             Facebook helps you connect and share with the people in your life.
           </h1>
